fixed mobile view of tutorial button, too small for fat finger

--- a/react-front-end/src/components/Recorder.scss
+++ b/react-front-end/src/components/Recorder.scss
@@ -65,14 +65,29 @@ audio::-webkit-media-controls-panel {
 }
 
 .tut-button {
+  width: 20vw;
+  height: 3.3vh;
   background: rgba(255, 216, 115, 0.75);
   box-shadow: inset 0px -3px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  font-family: "Boogaloo", cursive;
+  font-family: "Futura";
   font-style: normal;
-  width: 35%;
+  font-weight: 700;
   font-size: 1.5em;
-  margin: 2em;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.15em;
+  margin-top: 2em;
+  color: rgba(0, 0, 0, 0.8);
+
+}
+@media only screen and (max-width: 775px) {
+  .tut-button {  
+    width: 60vw;
+    height: 6.3vh;
+    margin-top: 1em;
+
+  }  
 }
 
 .training-details {
